Closed Bug 1748728 Opened 2 years ago Closed 2 years ago

WritableStreams implementation isn't correctly annotated with MOZ_RUN_SCRIPT

Categories

(Core :: DOM: Streams, defect)

defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox95 --- unaffected
firefox96 --- unaffected
firefox97 --- fixed

People

(Reporter: mgaudet, Assigned: mgaudet)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

10:46.52 In file included from Unified_cpp_dom_streams0.cpp:92:
10:46.52 /home/matthew/unified2/dom/streams/WritableStreamDefaultController.cpp:99:13: error: functions marked as MOZ_CAN_RUN_SCRIPT can only be called from functions also marked as MOZ_CAN_RUN_SCRIPT
10:46.52           ? abortAlgorithm->AbortCallback(aCx, optionalReason, aRv)
10:46.52             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
10:46.52 /home/matthew/unified2/obj-debug-browser-x86_64-pc-linux-gnu/dist/include/mozilla/dom/WritableStreamDefaultController.h:57:37: note: caller function declared here
10:46.52   virtual already_AddRefed<Promise> AbortSteps(JSContext* aCx,
10:46.52                                     ^
10:46.52 In file included from Unified_cpp_dom_streams0.cpp:92:
10:46.52 /home/matthew/unified2/dom/streams/WritableStreamDefaultController.cpp:379:24: error: functions marked as MOZ_CAN_RUN_SCRIPT can only be called from functions also marked as MOZ_CAN_RUN_SCRIPT
10:46.52       closeAlgorithm ? closeAlgorithm->CloseCallback(aCx, aRv)
10:46.52                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
10:46.52 /home/matthew/unified2/dom/streams/WritableStreamDefaultController.cpp:357:6: note: caller function declared here
10:46.52 void WritableStreamDefaultControllerProcessClose(
10:46.52      ^
10:46.52 /home/matthew/unified2/dom/streams/WritableStreamDefaultController.cpp:494:13: error: functions marked as MOZ_CAN_RUN_SCRIPT can only be called from functions also marked as MOZ_CAN_RUN_SCRIPT
10:46.52           ? writeAlgorithm->WriteCallback(aCx, aChunk, *aController, aRv)
10:46.53             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
10:46.53 /home/matthew/unified2/dom/streams/WritableStreamDefaultController.cpp:478:6: note: caller function declared here
10:46.53 void WritableStreamDefaultControllerProcessWrite(
10:46.54      ^
10:46.54 /home/matthew/unified2/dom/streams/WritableStreamDefaultController.cpp:673:13: error: functions marked as MOZ_CAN_RUN_SCRIPT can only be called from functions also marked as MOZ_CAN_RUN_SCRIPT
10:46.54           ? sizeAlgorithm->Call(
10:46.54             ^~~~~~~~~~~~~~~~~~~~
10:46.54 /home/matthew/unified2/obj-debug-browser-x86_64-pc-linux-gnu/dist/include/mozilla/dom/WritableStreamDefaultController.h:188:15: note: caller function declared here
10:46.54 extern double WritableStreamDefaultControllerGetChunkSize(
10:46.54               ^

To allow building with --enable-clang-plugin

Assignee: nobody → mgaudet
Attachment #9257725 - Attachment description: WIP: Bug 1748728 - Correctly annotate WritableStreams implementation with MOZ_RUN_SCRIPT → Bug 1748728 - Correctly annotate WritableStreams implementation with MOZ_RUN_SCRIPT r?smaug
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1735664

Blocks: 1730585
Attachment #9257835 - Attachment description: Bug 1748728 - Mark WritableStreamDefaultController::AbortSteps as CAN_RUN_SCRIPT r=mgaudet,smaug → Bug 1748728 - Mark WritableStreamDefaultController::AbortSteps as CAN_RUN_SCRIPT r=mgaudet
Attachment #9257835 - Attachment description: Bug 1748728 - Mark WritableStreamDefaultController::AbortSteps as CAN_RUN_SCRIPT r=mgaudet → Bug 1748728 - Correctly annotate WritableStreams implementation with CAN_RUN_SCRIPT r=mgaudet
Attachment #9257725 - Attachment is obsolete: true
Pushed by krosylight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d060ad27e1a8
Correctly annotate WritableStreams implementation with CAN_RUN_SCRIPT r=mgaudet
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: