Bug 1748728 - Correctly annotate WritableStreams implementation with CAN_RUN_SCRIPT r=mgaudet

Differential Revision: https://phabricator.services.mozilla.com/D135228