dom/streams/WritableStreamDefaultController.cpp
@@ -120,13 +120,15 @@ void WritableStreamDefaultController::SetSignal(AbortSignal* aSignal) {
   mSignal = aSignal;
 }
 
-void WritableStreamDefaultControllerAdvanceQueueIfNeeded(
+MOZ_CAN_RUN_SCRIPT static void
+WritableStreamDefaultControllerAdvanceQueueIfNeeded(
     JSContext* aCx, WritableStreamDefaultController* aController,
     ErrorResult& aRv);
 
 class WritableStartPromiseNativeHandler final : public PromiseNativeHandler {
   ~WritableStartPromiseNativeHandler() = default;
 
+  // Virtually const, but cycle collected
   RefPtr<WritableStreamDefaultController> mController;
 
  public:
@@ -137,7 +139,8 @@ class WritableStartPromiseNativeHandler final : public PromiseNativeHandler {
       WritableStreamDefaultController* aController)
       : PromiseNativeHandler(), mController(aController) {}
 
-  void ResolvedCallback(JSContext* aCx, JS::Handle<JS::Value> aValue) override {
+  MOZ_CAN_RUN_SCRIPT void ResolvedCallback(
+      JSContext* aCx, JS::Handle<JS::Value> aValue) override {
     // https://streams.spec.whatwg.org/#set-up-writable-stream-default-controller
     // Step 17. Upon fulfillment of startPromise,
     // Step 17.1. Assert: stream.[[state]] is "writable" or "erroring".
@@ -150,13 +153,15 @@ class WritableStartPromiseNativeHandler final : public PromiseNativeHandler {
     // Step 17.3 Perform
     // ! WritableStreamDefaultControllerAdvanceQueueIfNeeded(controller).
     IgnoredErrorResult rv;
-    WritableStreamDefaultControllerAdvanceQueueIfNeeded(aCx, mController, rv);
+    WritableStreamDefaultControllerAdvanceQueueIfNeeded(
+        aCx, MOZ_KnownLive(mController), rv);
     if (rv.MaybeSetPendingException(aCx)) {
       return;
     }
   }
 
-  void RejectedCallback(JSContext* aCx, JS::Handle<JS::Value> aValue) override {
+  MOZ_CAN_RUN_SCRIPT void RejectedCallback(
+      JSContext* aCx, JS::Handle<JS::Value> aValue) override {
     // https://streams.spec.whatwg.org/#set-up-writable-stream-default-controller
     RefPtr<WritableStream> stream = mController->Stream();
     // Step 18. Upon rejection of startPromise with reason r,
@@ -331,7 +336,8 @@ class SinkCloseNativePromiseHandler final : public PromiseNativeHandler {
     stream->FinishInFlightClose();
   }
 
-  void RejectedCallback(JSContext* aCx, JS::Handle<JS::Value> aValue) override {
+  MOZ_CAN_RUN_SCRIPT void RejectedCallback(
+      JSContext* aCx, JS::Handle<JS::Value> aValue) override {
     // https://streams.spec.whatwg.org/#writable-stream-default-controller-process-close
     RefPtr<WritableStream> stream = mController->Stream();
     // Step 8. Upon rejection of sinkClosePromise with reason reason,
@@ -355,7 +361,7 @@ NS_INTERFACE_MAP_BEGIN_CYCLE_COLLECTION(SinkCloseNativePromiseHandler)
 NS_INTERFACE_MAP_END
 
 // https://streams.spec.whatwg.org/#writable-stream-default-controller-process-close
-void WritableStreamDefaultControllerProcessClose(
+MOZ_CAN_RUN_SCRIPT static void WritableStreamDefaultControllerProcessClose(
     JSContext* aCx, WritableStreamDefaultController* aController,
     ErrorResult& aRv) {
   // Step 1. Let stream be controller.[[stream]].
@@ -395,6 +401,7 @@ void WritableStreamDefaultControllerProcessClose(
 class SinkWriteNativePromiseHandler final : public PromiseNativeHandler {
   ~SinkWriteNativePromiseHandler() = default;
 
+  // Virtually const, but is cycle collected
   RefPtr<WritableStreamDefaultController> mController;
 
  public:
@@ -405,7 +412,8 @@ class SinkWriteNativePromiseHandler final : public PromiseNativeHandler {
       WritableStreamDefaultController* aController)
       : PromiseNativeHandler(), mController(aController) {}
 
-  void ResolvedCallback(JSContext* aCx, JS::Handle<JS::Value> aValue) override {
+  MOZ_CAN_RUN_SCRIPT void ResolvedCallback(
+      JSContext* aCx, JS::Handle<JS::Value> aValue) override {
     // https://streams.spec.whatwg.org/#writable-stream-default-controller-process-write
     RefPtr<WritableStream> stream = mController->Stream();
 
@@ -441,14 +449,16 @@ class SinkWriteNativePromiseHandler final : public PromiseNativeHandler {
     // Step 4.6. Perform !
     // WritableStreamDefaultControllerAdvanceQueueIfNeeded(controller).
     IgnoredErrorResult rv;
-    WritableStreamDefaultControllerAdvanceQueueIfNeeded(aCx, mController, rv);
+    WritableStreamDefaultControllerAdvanceQueueIfNeeded(
+        aCx, MOZ_KnownLive(mController), rv);
     // XXX Not Sure How To Handle Errors Inside Native Callbacks,
     NS_WARNING_ASSERTION(
         !rv.Failed(),
         "WritableStreamDefaultControllerAdvanceQueueIfNeeded failed");
   }
 
-  void RejectedCallback(JSContext* aCx, JS::Handle<JS::Value> aValue) override {
+  MOZ_CAN_RUN_SCRIPT void RejectedCallback(
+      JSContext* aCx, JS::Handle<JS::Value> aValue) override {
     // https://streams.spec.whatwg.org/#writable-stream-default-controller-process-write
     RefPtr<WritableStream> stream = mController->Stream();
 
@@ -476,7 +486,7 @@ NS_INTERFACE_MAP_BEGIN_CYCLE_COLLECTION(SinkWriteNativePromiseHandler)
 NS_INTERFACE_MAP_END
 
 // https://streams.spec.whatwg.org/#writable-stream-default-controller-process-write
-void WritableStreamDefaultControllerProcessWrite(
+MOZ_CAN_RUN_SCRIPT static void WritableStreamDefaultControllerProcessWrite(
     JSContext* aCx, WritableStreamDefaultController* aController,
     JS::Handle<JS::Value> aChunk, ErrorResult& aRv) {
   // Step 1. Let stream be controller.[[stream]].
@@ -511,7 +521,7 @@ void WritableStreamDefaultControllerProcessWrite(
 constexpr JSWhyMagic CLOSE_SENTINEL = JS_GENERIC_MAGIC;
 
 // https://streams.spec.whatwg.org/#writable-stream-default-controller-advance-queue-if-needed
-void WritableStreamDefaultControllerAdvanceQueueIfNeeded(
+static void WritableStreamDefaultControllerAdvanceQueueIfNeeded(
     JSContext* aCx, WritableStreamDefaultController* aController,
     ErrorResult& aRv) {
   // Step 1. Let stream be controller.[[stream]].
